--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+   
 
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    <link rel="alternate icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <meta name="theme-color" content="#0a192f">
+
+    <script src="script.js" defer></script>
+</head>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -22,7 +30,7 @@
                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 2L4 5V11C4 16.5 7.6 21.7 12 23C16.4 21.7 20 16.5 20 11V5L12 2ZM12 12H18C17.5 16.5 14.9 20.3 12 21.8V12H6V6.3L12 3.2V12Z" fill="currentColor"/>
                 </svg>
-                <span>consoulting.chouifi</span>
+                <span>CCA Chouifi</span>
             </a>
             <ul class="nav-links">
                 <li><a href="#hero">Home</a></li>
@@ -115,8 +123,8 @@
                         <h2 class="section-title">Driven by a Mission to Secure</h2>
                         <p class="about-description">Consoulting Chouifi was founded on the principle that every business deserves robust, accessible, and understandable security. We are a dedicated team of ethical hackers and security strategists committed to protecting your digital assets.</p>
                         <div class="founder-info">
-                            <h4>Yassine Chouifi, Founder</h4>
-                            <p>A seasoned security consultant with over 10 years of experience in offensive security, red teaming, and strategic risk management for global clients.</p>
+                            <h4>A. Chouifi, Founder</h4>
+                            <p>A seasoned security consultant with many years of experience in offensive security, red teaming, and strategic risk management.</p>
                         </div>
                     </div>
                     <div class="about-values">
@@ -136,7 +144,7 @@
             <div class="container">
                 <div class="section-header animated-item" data-animation="fade-in">
                     <h2 class="section-title">Proven Results. Transparent Process.</h2>
-                    <p class="section-subtitle">Download our anonymized penetration test report to see our methodology and reporting style firsthand.</p>
+                    <p class="section-subtitle">Download our penetration test report to see our methodology and reporting style firsthand.</p>
                 </div>
                 <div class="download-container animated-item" data-animation="zoom-in" data-delay="200">
                     <div class="pdf-preview">
